fix css formatting for drop handler (making it specific to drop handler table) style clean up for word-wrap

--- a/src/main/webapp/VAADIN/themes/gcp-default/styles.css
+++ b/src/main/webapp/VAADIN/themes/gcp-default/styles.css
@@ -341,12 +341,4 @@
 	background-color: #e3e3e3;
 }
 
-.wrap-word {
-	white-space: -moz-pre-wrap !important;  /* Mozilla, since 1999 */
-	white-space: -pre-wrap;      /* Opera 4-6 */
-	white-space: -o-pre-wrap;    /* Opera 7 */
-	white-space: pre-wrap;       /* css-3 */
-	word-wrap: break-word;       /* Internet Explorer 5.5+ */
-	word-break: break-all;
-	white-space: normal;
-}
+
